--- a/KtExample/build.gradle
+++ b/KtExample/build.gradle
@@ -1,8 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext {
+    android_support_version = '25.3.1'
+}
+
 buildscript {
     ext.kotlin_version = '1.1.2-4'
-    ext.android_support_version = '25.3.1'
+
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
