--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -10,6 +10,8 @@ apply from: "$project.rootDir/tools/script-java-code-coverage.gradle"
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
+    flavorDimensions 'buildtype'
+
     defaultConfig {
         applicationId "com.astir_trotter.ktexample"
         minSdkVersion 16
@@ -19,21 +21,22 @@ android {
 
     signingConfigs {
         debug {
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-            storePassword 'android'
+            keyAlias 'ktExampleDebug'
+            keyPassword 'ktExampleDebug'
+            storePassword 'ktExample'
             storeFile file('../keystore/debug.keystore')
         }
         release {
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-            storePassword 'android'
+            keyAlias 'ktExampleRelease'
+            keyPassword 'ktExampleRelease'
+            storePassword 'ktExample'
             storeFile file('../keystore/release.keystore')
         }
     }
 
     productFlavors {
         dev {
+            dimension 'buildtype'
             signingConfig signingConfigs.debug
             versionCode gitVersionCodeTime
             versionName gitVersionName
@@ -41,6 +44,7 @@ android {
         }
 
         prod {
+            dimension 'buildtype'
             signingConfig signingConfigs.release
             versionCode gitVersionCode
             versionName gitVersionName
