--- a/tools/script-git-version.gradle
+++ b/tools/script-git-version.gradle
@@ -20,7 +20,7 @@ import org.ajoberstar.grgit.Grgit
  */
 
 ext {
-    git = Grgit.open(currentDir: "$project.rootDir/../")
+    git = Grgit.open(currentDir: projectDir)
     gitVersionName = git.describe()
     gitVersionCode = git.tag.list().size()
     gitVersionCodeTime = git.head().time
