--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -12,10 +12,10 @@ android {
     buildToolsVersion "25.0.3"
     flavorDimensions 'buildtype'
 
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId "com.astir_trotter.ktexample"
