--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -81,7 +81,10 @@ dependencies {
     compile "com.android.support:appcompat-v7:$android_support_version"
     compile "com.android.support:design:$android_support_version"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'io.reactivex:rxjava:1.1.3'
+    compile 'io.reactivex:rxandroid:1.1.0'
 
     testCompile 'junit:junit:4.12'
 }
