--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -82,9 +82,16 @@ dependencies {
     compile "com.android.support:design:$android_support_version"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    // Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    // RxJava / RxAndroid
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
+
+    // Retrofit
+    compile "com.squareup.retrofit2:retrofit:2.0.2"
+    compile "com.squareup.retrofit2:converter-moshi:2.0.0" // JSON -> Java/Kotlin class
 
     testCompile 'junit:junit:4.12'
 }
