--- a/KtExample/build.gradle
+++ b/KtExample/build.gradle
@@ -23,7 +23,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://maven.google.com' }
+        maven {
+            url 'https://maven.google.com'
+        }
         mavenCentral()
     }
 }
