--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -72,6 +72,10 @@ android {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -92,6 +96,11 @@ dependencies {
     // Retrofit
     compile "com.squareup.retrofit2:retrofit:2.0.2"
     compile "com.squareup.retrofit2:converter-moshi:2.0.0" // JSON -> Java/Kotlin class
+
+    // Dagger 2
+    compile 'com.google.dagger:dagger:2.4'
+    kapt 'com.google.dagger:dagger-compiler:2.4'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
 
     // Tests
     testCompile 'junit:junit:4.12'
