--- a/KtExample/app/src/main/AndroidManifest.xml
+++ b/KtExample/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.astir_trotter.ktexample">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".KtExampleApplication"
         android:allowBackup="true"
