--- a/KtExample/build.gradle
+++ b/KtExample/build.gradle
@@ -1,7 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 ext {
-    android_support_version = '25.3.1'
+    compileSdkVersion = 25
+    buildToolsVersion = "25.0.3"
+
+    minSdkVersion = 16
+    targetSdkVersion = 25
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    supportLibVersion = '25.3.1'
 }
 
 buildscript {
@@ -23,9 +32,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com'
-        }
+        maven { url 'https://maven.google.com' }
+        maven { url "http://repository.jetbrains.com/all" }
         mavenCentral()
     }
 }
