--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -73,6 +73,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 kapt {
