minor package changes

--- a/KtExample/app/build.gradle
+++ b/KtExample/app/build.gradle
@@ -14,8 +14,8 @@ android {
     flavorDimensions 'buildtype'
 
     compileOptions {
-        sourceCompatibility rootProject.ext.sourceCompatibility
-        targetCompatibility rootProject.ext.targetCompatibility
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
